--- a/.github/workflows/PulumiRunnerBuild.yml
+++ b/.github/workflows/PulumiRunnerBuild.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
 
-    - name: Rake Variables
-      run: |
-        set -x ; \
-        echo "varrundate=$(date +%y%m%d%I%M%S)" >> ${GITHUB_ENV};\
-        echo "varverkubectl=$(curl -sL curl -L -s https://dl.k8s.io/release/stable.txt)" >> ${GITHUB_ENV};\
-        echo "varverhelm=$(curl -s https://api.github.com/repos/helm/helm/releases/latest | awk -F '["v,]' '/tag_name/{print $5}')" >> ${GITHUB_ENV};\
-        echo "varverpulumi=$(curl -s https://api.github.com/repos/pulumi/pulumi/releases/latest | awk -F '["v,]' '/tag_name/{print $5}')" >> ${GITHUB_ENV};\
-        echo;  
+      #    - name: Rake Variables
+      #      run: |
+      #        set -x ; \
+      #        echo "varrundate=$(date +%y%m%d%I%M%S)" >> ${GITHUB_ENV};\
+      #        echo "varverkubectl=$(curl -sL curl -L -s https://dl.k8s.io/release/stable.txt)" >> ${GITHUB_ENV};\
+      #        echo "varverhelm=$(curl -s https://api.github.com/repos/helm/helm/releases/latest | awk -F '["v,]' '/tag_name/{print $5}')" >> ${GITHUB_ENV};\
+      #        echo "varverpulumi=$(curl -s https://api.github.com/repos/pulumi/pulumi/releases/latest | awk -F '["v,]' '/tag_name/{print $5}')" >> ${GITHUB_ENV};\
+      #        echo;  
 
     - name: Login ghcr.io
       uses: docker/login-action@v1.10.0
@@ -45,11 +45,11 @@ jobs:
           ghcr.io/${{ github.actor }}/${{ github.workflow }}
           ghcr.io/${{ github.actor }}/${{ github.workflow }}:latest
           ghcr.io/${{ github.actor }}/${{ github.workflow }}:${{ github.sha }}
-        build-args: |
-          varrundate=${{ env.varrundate }}
-          varverhelm=${{ env.varverhelm }}
-          varverpulumi=${{ env.varverpulumi }}
-          varverkubectl=${{ env.varverkubectl }}
+          #        build-args: |
+          #          varrundate=${{ env.varrundate }}
+          #          varverhelm=${{ env.varverhelm }}
+          #          varverpulumi=${{ env.varverpulumi }}
+          #          varverkubectl=${{ env.varverkubectl }}
  
     - name: Trigger Pulumi Deploy
       if: success()
