--- a/pulumi/Pulumi.KongOnEKS.yaml
+++ b/pulumi/Pulumi.KongOnEKS.yaml
@@ -1,4 +1,5 @@
 config:
+  KongOnEKS:dbPassword: password
   airflow:dbPassword:
     secure: AAABADsEK3AIjnZPtL+swrWBOFL2jdgXPJKC6onziOKaJ6sD
   aws:region: us-east-1
