--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -4,9 +4,10 @@
         "@types/node": "^10.0.0"
     },
     "dependencies": {
-        "@pulumi/pulumi": "^3.0.0",
-        "@pulumi/aws": "^4.0.0",
+        "@pulumi/aws": "^4.14.0",
         "@pulumi/awsx": "^0.30.0",
-        "@pulumi/eks": "^0.31.0"
+        "@pulumi/eks": "^0.31.0",
+        "@pulumi/kubernetes": "^3.5.2",
+        "@pulumi/pulumi": "^3.9.1"
     }
 }
