--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -34,8 +34,11 @@ jobs:
     - name: Pulumi Up
       working-directory: pulumi
       run: |
-        pulumi config set --stack KongOnEKS --secret kong:dbPassword ${{ secrets.KONG_POSTGRES_PASSWD }}
-        pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs
+        pulumi stack select usrbinkat/Gateway/KongHybridGatewayOnEKS
+        pulumi config set aws:region us-east-1
+        pulumi config set eksCluster:clusterName KongOnEKS
+        pulumi config set --secret kong:dbPassword ${{ secrets.KONG_POSTGRES_PASSWD }}
+        pulumi up --yes --non-interactive --suppress-outputs
 
     - name: Pull .kube/config for subsequent tasks
       working-directory: pulumi
@@ -43,8 +46,3 @@ jobs:
 
     - name: Test Kubeconfig | get nodes
       run: "KUBECONFIG=/root/.kube/config kubectl get nodes"
-
-#   - name: Install + Configure Helm
-#     run: |-
-#       curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
-#       helm repo add bitnami https://charts.bitnami.com/bitnami
